Fixed Nav align
fixed nav

--- a/styles.css
+++ b/styles.css
@@ -136,10 +136,13 @@ input[type=reset]:hover {
 .csssize{
     width:250px;
     height: 500px;
+    vertical-align: top;
 }
 
 .csstext{
+    /*height: 10%;*/
     text-align: center;
+    
 }
 
 /*Andy's sandbox*/
